--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -33,12 +33,12 @@
                 </li>
               
                
-                <!-- <li class="menu-item ">
-                    <a class="menu-link" href="/admin/adminlogin"> <i class="icon material-icons md-person"></i>
-                        <span class="text">Account</span>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
+                        <span class="text">Brand</span>
                     </a>
                     
-                </li> -->
+                </li>
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
