--- a/views/admin/productBrand.ejs
+++ b/views/admin/productBrand.ejs
@@ -1,7 +1,7 @@
 
 <%- include("../partials/adminHeader.ejs") %>
 
-  
+
 <body class="dark">
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
@@ -34,13 +34,14 @@
                 </li>
               
                
-                <li class="menu-item ">
+                <li class="menu-item active">
                     <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
                         <span class="text">Brand</span>
                     </a>
                 </li>
-                
-                <li class="menu-item active">
+
+
+                <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
                     </a>
@@ -96,10 +97,9 @@
 <section class="content-main">
     <div class="content-header">
         <div>
-            <h2 class="content-title card-title">Categories </h2>
-            <p>Add, edit or delete a category</p>
+            <h2 class="content-title card-title">Brands </h2>
+            <p>Add, edit or delete a Brand</p>
         </div>
-
         <div>
             <input type="text"  placeholder="Search Categories" class="form-control bg-white">
         </div>
@@ -110,24 +110,19 @@
                 <div class="col-md-3">
 
 
-                    <form id="createCat" action="/admin/category" method="post">
+                    <form id="createBrand" action="/admin/brand" method="post">
                         <div class="mb-4">
-                               <p class="form-label"><h6>Add New Category</h6></p>
-                            <label for="productName" class="form-label">Name</label>
-                            <input id="productName" type="text" name="name" placeholder="Type here" class="form-control" />
+                               <p class="form-label"><h6>Add New Brand</h6></p>
+                            <label for="brandName" class="form-label">Brand Name</label>
+                            <input id="brandName" type="text" name="brandName" placeholder="Type here" class="form-control" />
                         </div>
                         <p><div id="error1" style="display: none;" class="alert alert-danger err"></div></p>
 
-                        <div class="mb-4">
-                            <label for="productDescription" class="form-label">Description</label>
-                            <textarea id="productDescription" name="description"  placeholder="Type here" class="form-control" ></textarea>
-                        </div>
-                        <p><div id="error2" style="display: none;" class="alert alert-danger err"></div></p>
                         <% if(typeof errMsg !== "undefined") {%>
                         <p style="color: red;"><%= errMsg %></p>
                         <% } %>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">Create category</button>
+                            <button type="submit" class="btn btn-primary">Create brand</button>
                         </div>
                         <p><div id="message" style="display: none; color: #155724;" class="alert alert-success "></div></p>
                         
@@ -138,34 +133,21 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <!-- <th class="text-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" />
-                                        </div>
-                                    </th> -->
-                                    
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                    <th>Action  </th>
+                                    <th>Brand</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
-
                             <tbody>
-                                <% category.forEach(cat => { %>
+                                <% brand.forEach(bra => { %>
                                 <tr>
-                                    <td><b><%= cat.name %></b></td>
-                                    <td><%= cat.description %></td>
-                                    <td><a href="/admin/categoryEdit/<%= cat._id %>">
-                                        <button class="toggleBtn btn btn-sm font-sm rounded" style="background-color: rgb(49, 103, 100);">Edit</button>
-                                    </a>
-                            </td>
+                                    <td><b><%= bra.brandName %></b></td>
                                     <td>
-                                        <% if (cat.isBlocked === true) { %>
-                                            <a href="/admin/categoryBlock?categoryName=<%= cat.name %>">
+                                        <% if (bra.isBlocked === true) { %>
+                                            <a href="/admin/brandBlock?brandName=<%= bra.brandName %>">
                                                 <button class="toggleBtn btn btn-sm font-sm btn-brand rounded">Unblock</button>
                                             </a>
                                         <% } else { %>
-                                            <a href="/admin/categoryBlock?categoryName=<%= cat.name %>">
+                                            <a href="/admin/brandBlock?brandName=<%= bra.brandName %>">
                                                 <button class="toggleBtn btn btn-sm font-sm btn-brand rounded">Block</button>
                                             </a>
                                         <% } %>
@@ -184,39 +166,25 @@
 
 
 <script>
-    const prodName = document.getElementById("productName");
-    const prodDescri = document.getElementById("productDescription");
+    const braName = document.getElementById("brandName");
     const error1 = document.getElementById("error1");
-    const error2 = document.getElementById("error2");
-    const createCat = document.getElementById("createCat");
+    const createBrand = document.getElementById("createBrand");
    
     
-    function catNameValidation() {
-        const catName = prodName.value.trim();
+    function braNameValidation() {
+        const catName = braName.value.trim();
         if (!catName) {
             error1.style.display = "block";
-            error1.innerHTML = "Please enter a category name.";
+            error1.innerHTML = "Please enter a brand name.";
         } else {
             error1.style.display = "none";
             error1.innerHTML = "";
         }
     }
-    
-    function catDescValidation() {
-        const catDesc = prodDescri.value.trim();
-        if (!catDesc) {
-            error2.style.display = "block";
-            error2.innerHTML = "Please enter a description.";
-        } else {
-            error2.style.display = "none";
-            error2.innerHTML = "";
-        }
-    }
 
     
     const messageDiv = document.getElementById("message"); 
-    prodName.addEventListener("blur", catNameValidation);
-    prodDescri.addEventListener("blur", catDescValidation);
+    braName.addEventListener("blur", braNameValidation);
     </script>
 
 <%- include("../partials/adminFooter.ejs") %>
