--- a/views/admin/productEdit.ejs
+++ b/views/admin/productEdit.ejs
@@ -3,14 +3,13 @@
 <style>
      .thumbnails-container {
             display: flex;
-            flex-wrap:wrap
+            flex-wrap: wrap;
         }
         .thumbnail {
             margin: 5px;
             width: 100px;
             height: 100px;
-            object-fit: contain;
-
+            object-fit: cover;
         }
 </style>
 
@@ -47,11 +46,11 @@
                 
                
                 <li class="menu-item ">
-                    <a class="menu-link" href="/admin/adminlogin"> <i class="icon material-icons md-person"></i>
-                        <span class="text">Account</span>
+                    <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
+                        <span class="text">Brand</span>
                     </a>
-                    
                 </li>
+                
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
@@ -86,7 +85,7 @@
                             <i class="material-icons md-notifications animation-shake"></i>
                             <span class="badge rounded-pill">3</span>
                         </a>
-                     </li>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link btn-icon darkmode" href="#"> <i class="material-icons md-nights_stay"></i> </a>
                     </li>
@@ -118,25 +117,28 @@
                             <h4>Basic</h4>
                         </div>
                         <div class="card-body">
-                            <form id="productAddForm" action="/admin/addProduct" method="post" enctype="multipart/form-data">
+                           
+                            <form id="productAddForm" action="/admin/productEdit/<%= product._id %>" method="post" enctype="multipart/form-data">
                                 <div class="mb-4">
-                                    <label for="product_name"  class="form-label">Product title</label>
-                                    <input id="product_name" name="productTitle" type="text"  placeholder="Type here" class="form-control" value="<%= product.productName%>" >
+                                    <label for="product_name"  class="form-label">Name</label>
+                                    <input id="product_name" name="productTitle" type="text"  value="<%= product.productName %>"  placeholder="Type here" class="form-control" >
                                 <p><div id="nameError"  class=" text-danger"></div></p>
                                 </div>
         
                                 <div class="mb-4">
                                     <label  for="productDescription" class="form-label">Description</label>
-                                    <input id="productDescription" name="description" placeholder="Type here" type="text" class="form-control"  value="<%= product.description%>" > </input>
+                                    <input id="productDescription" name="description" placeholder="Type here" type="text" value="<%= product.description %>" class="form-control" rows="4" ></input>
                                     <p><div id="descriptionError"  class=" text-danger"></div></p>
                                 </div>
+                                
+        
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <div class="mb-4">
                                             
                                             <div class="row gx-2">
-                                                <label for="regPrice" class="form-label"></label>
-                                                <input id="regPrice" placeholder="$" name="regPrice" type="text" value="<%= product.regularPrice%>" class="form-control">
+                                                <label for="regPrice" class="form-label">Regular price</label>
+                                                <input id="regPrice" placeholder="$" name="regPrice" type="text" value="<%= product.regularPrice %>" class="form-control">
                                                 <p><div id="regularError" class=" text-danger"></div></p>
                                             </div>
         
@@ -145,14 +147,15 @@
                                     <div class="col-lg-4">
                                         <div class="mb-4">
                                             <label for="offerPrice" class="form-label">Offer price</label>
-                                            <input id="offerPrice" placeholder="$" name="OfferPrice" type="text" value="<%= product.salePrice%>" class="form-control">
+                                            <input id="offerPrice" placeholder="$" name="OfferPrice" type="text" value="<%= product.salePrice %>" class="form-control">
                                         <p><div id="offerPriceError" class=" text-danger"></div></p>
                                     </div>
                                     </div>
                                     
+                                   
                                     <div class="mb-4">
                                         <label  for="product_stock" class="form-label">Stock</label>
-                                        <input id="product_stock" name="stock" placeholder="Type here" type="text" value="<%= product.quantity%>" class="form-control"></input>
+                                        <input id="product_stock" name="stock" placeholder="Type here" type="text" value="<%= product.quantity %>" class="form-control"></input>
                                         <p><div id="stockError"  class=" text-danger"></div></p>
                                     </div>
                                     
@@ -162,31 +165,34 @@
                                 <!-- </div> -->
                                
                                 <div class="col-lg-12">
-                                        
-                                        <div class="card-body">
-                                            <div class="card mb-6">
+                                            <div class="card mb-12">
                                                 <div class="card-header">
                                                     <h4>Choose images</h4>
                                                 </div>
-                                                <div class="border row">
-                                                    <div id="addedImagesContainer" class="thumbnails-container">
-                                                    <% product.productImage.forEach(image => { %>
-                                                        <img src="/assets/adminAssets/imgUploads/<%= image %>" alt="Product Image" class="thumbnail">
-                                                    <% }); %>
-                                                </div>
-                                                </div>
-                                                <div class="card-body">
+                                                
+                                                <div >
+                                                    <div class="border row">
+                                                        <div id="addedImagesContainer" class="thumbnails-container">
+                                                            <% for(let i=0; i<product.productImage.length; i++) { %>
+                                                            <img  src="/assets/adminAssets/imgUploads/<%= product.productImage[i] %>" class="img-sm , thumbnail"  alt="Product">
+                                                            <% } %></div>
+                                                    </div>    
+                                                </div> 
+                                               <div class="card-body">
                                                     <div class="input-upload">
                                                         <input class="form-control border" name="images" id="imageInput" type="file"
                                                             multiple>
                                                     </div>
                                                     <p><div id="images-error"  class=" text-danger"></div></p>
-        
                                                 </div>
+                                            </div>
+                                        
+                                               
+                                               
                                                 
-                                            </div> <!-- card end// -->
+                                </div> <!-- card end// -->
                                             
-                                  
+                                
                                             <div class="card mb-4">
                                                 <div class="card-header">
                                                     <h4>Organization</h4>
@@ -196,8 +202,8 @@
                                                         <div class="col-sm-6 mb-3">
                                                             <label name="category" class="form-label">Category</label>
                                                             <select class="form-select">
-                                                                <option>Category</option>
-                                                                <option > Laptop Bags </option>
+                                                                <option> Travel Bags </option>
+                                                                <option> Laptop Bags </option>
                                                                 <option> School Bags </option>
                                                                 <option> Hand Bags </option>
                                                             </select>
@@ -205,8 +211,6 @@
                                                         <div class="col-sm-6 mb-3">
                                                             <label name="brand" class="form-label">Brand</label>
                                                             <select class="form-select">
-                                                                <% for(let i=0;i<) %>
-                                                
                                                                 <option> Passenger </option>
                                                                 <option> Nike </option>
                                                                 <option> Miraggio </option>
@@ -306,10 +310,10 @@
                 return false
             } else if (/^\d+$/.test(regular)) {
                 const regNumber = parseInt(regular);
-                if (regNumber < 1000) {
-                    regularError.innerHTML = "Regular price need more than 1000 amount"
+                if (regNumber < 100) {
+                    regularError.innerHTML = "Regular price need more than 100 amount"
                     return false
-                } else if (regNumber > 100000) {
+                } else if (regNumber >  100000) {
                     regularError.innerHTML = "Regular price can't accept more than 1,00,000 amount"
                     return false
                 }
@@ -322,6 +326,7 @@
     }
 
     function offerValidation() {
+         const regular = document.getElementById("regPrice").value;
         const offerPrice = document.getElementById("offerPrice").value;
         const offerPriceError = document.getElementById("offerPriceError");
         // Validation logic for offer price
@@ -329,14 +334,17 @@
                 offerPriceError.innerHTML = "Please enter valid amount"
                 return false
             } else if (/^\d+$/.test(offerPrice)) {
-                const regNumber = parseInt(offerPrice);
-                if (regNumber < 1000) {
-                    offerPriceError.innerHTML = "Offer price need more than 1000 amount"
+                const offerNumber = parseInt(offerPrice);
+                const regNumber = parseInt(regular);
+                if (offerNumber > regNumber) {
+                    offerPriceError.innerHTML = "Offer price cannot exceed regular price"
                     return false
-                } else if (regNumber > 100000) {
+                } else if (offerNumber > 100000 ) {
                     offerPriceError.innerHTML = "Offer price can't accept more than 1,00,000 amount"
                     return false
-                }
+                } else if (offerNumber < 100) {
+                    regularError.innerHTML = "Regular price need more than 100 amount"
+                    return false
             } else {
                 offerPriceError.innerHTML = "Price can't contain characters other numbers"
                 return false
@@ -344,6 +352,7 @@
             offerPriceError.innerHTML = "";
             return true
     }
+}
 
     function stockValidation() {
         const stock = document.getElementById("product_stock").value;
@@ -413,4 +422,4 @@
 
 </script>
 
-<%- include("../partials/adminFooter.ejs") %></form>
+<%- include("../partials/adminFooter.ejs") %>
