--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,6 +1,8 @@
 
 <%- include("../partials/adminHeader.ejs") %>
 
+
+
 <body class="dark">
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
@@ -20,7 +22,7 @@
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/admin/products"> <i class="icon material-icons md-shopping_bag"></i>
+                    <a class="menu-link " href="/admin/products"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
                    
@@ -31,14 +33,14 @@
                         <span class="text">Users</span>
                     </a>
                 </li>
-              
+                
                
-                <!-- <li class="menu-item ">
-                    <a class="menu-link" href="/admin/adminlogin"> <i class="icon material-icons md-person"></i>
-                        <span class="text">Account</span>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
+                        <span class="text">Brand</span>
                     </a>
                     
-                </li> -->
+                </li>
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
@@ -73,7 +75,7 @@
                             <i class="material-icons md-notifications animation-shake"></i>
                             <span class="badge rounded-pill">3</span>
                         </a>
-                    </li>
+                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn-icon darkmode" href="#"> <i class="material-icons md-nights_stay"></i> </a>
                     </li>
@@ -91,38 +93,78 @@
                 </ul>
             </div>
         </header>
-
-
-<section class="content-main">
-    <div class="content-header">
-        <div>
-            <h2 class="content-title card-title">Products </h2>
-        </div>
-        <div>
-            <a href="addProducts" class="btn btn-primary btn-sm rounded">Create new</a>
-        </div>
-    </div>
-    <div class="card mb-4">
-        <div class="card-body">
-            <div class="row gx-3 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 row-cols-xxl-5">
-
-                <% for(let i=0; i<product.length; i++) { %>
-                    <div class="col">
-                        <div class="card card-product-grid">
-                            <!-- <a href="#" class="img-wrap"> -->
-                                <img class="imgStyle" src="/assets/adminAssets/imgUploads/<%= product[i].productImage[0] %>" alt="Product">
-                            </a>
-                            <div class="info-wrap">
-                                <a href="#" class="title text-truncate"><%= product[i].productName %></a>
-                                <div class="price mb-2">$<%= product[i].regularPrice %></div>
+        <section class="content-main">
+            <div class="content-header">
+                <div>
+                    <h2 class="content-title card-title">Products List</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div>
+                    <a href="/admin/productAdd" class="btn btn-primary btn-sm rounded">Create new</a>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <header class="card-header">
+                    <div class="row align-items-center">
+                        <div class="col col-check flex-grow-0">
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" value="">
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
+                            <select class="form-select">
+                                <option selected>All category</option>
+                                <option>Electronics</option>
+                                <option>Clothes</option>
+                                <option>Automobile</option>
+                            </select>
+                        </div>
+                        <div class="col-md-2 col-6">
+                            <input type="date" value="02.05.2022" class="form-control">
+                        </div>
+                        <div class="col-md-2 col-6">
+                            <select class="form-select">
+                                <option selected>Status</option>
+                                <option>Active</option>
+                                <option>Disabled</option>
+                                <option>Show all</option>
+                            </select>
+                        </div>
+                    </div>
+                </header> <!-- card-header end// -->
+                <div class="card-body">
+                    <% for(let i=0; i<product.length; i++) { %>
+                    <article class="itemlist">
+                        <div class="row align-items-center">
+                            <div class="col col-check flex-grow-0">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-4 col-8 flex-grow-1 col-name">
+                                <a class="itemside" href="#">
+                                    <div class="left">
+                                        <img  src="/assets/adminAssets/imgUploads/<%= product[i].productImage[0] %>" class="img-sm img-thumbnail" alt="Product">
+                                    </div>
+                                    <div class="info">
+                                        <h6 class="mb-0"><%= product[i].productName %></h6>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-4 col-price"> <span>$<%= product[i].regularPrice %></span> </div>
+                            <div class="col-lg-2 col-sm-2 col-4 col-status">
+                                <span class="badge rounded-pill alert-success">Active</span>
+                            </div>
+                            <div class="col-lg-1 col-sm-2 col-4 col-date">
+                                <span>02.11.2022</span>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
                                 <a href="/admin/editProduct/<%= product[i]._id %>">
                                     <button class="btn btn-sm font-sm btn-brand rounded">Edit</button>
                                 </a>
-                                
-                                
                                 <% if (product[i].isBlocked === true) { %>
                                     <a href="/admin/productBlock?productName=<%= product[i].productName %>">
-                                        <button class="toggleBtn btn btn-sm font-sm btn-brand rounded">Unblock</button>
+                                        <button class="toggleBtn btn btn-sm font-sm  rounded">Unblock</button>
                                     </a>
                                 <% } else { %>
                                     <a href="/admin/productBlock?productName=<%= product[i].productName %>">
@@ -130,12 +172,40 @@
                                     </a>
                                 <% } %>   
                             </div>
-                        </div> 
-                    </div> 
-                <% } %>
-                
-            </div> 
-        </div> 
-    </div>
-</section> 
+                        </div> <!-- row .// -->
+                    </article> <!-- itemlist  .// -->
+                    <% } %>
+                  
+                </div> <!-- card-body end// -->
+            </div> <!-- card end// -->
+           
+        </section> <!-- content-main end// -->
+        <footer class="main-footer font-xs">
+            <div class="row pb-30 pt-15">
+                <div class="col-sm-6">
+                    <script>
+                    document.write(new Date().getFullYear())
+                    </script> ©, Evara - HTML Ecommerce Template .
+                </div>
+                <div class="col-sm-6">
+                    <div class="text-sm-end">
+                        All rights reserved
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </main>
+    <script src="assets/adminAssets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="assets/adminAssets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="assets/adminAssets/js/vendors/select2.min.js"></script>
+    <script src="assets/adminAssets/js/vendors/perfect-scrollbar.js"></script>
+    <script src="assets/adminAssets/js/vendors/jquery.fullscreen.min.js"></script>
+    <!-- Main Script -->
+    <script src="assets/adminAssets/js/main.js" type="text/javascript"></script>
+</body>
+
+
+
+
+
     <%- include("../partials/adminFooter.ejs") %>
