--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="product-details-cart">
-                                    <a title="Add to cart" href="#">Add to cart</a>
+                                    <a title="Add to cart" href="/productCart">Add to cart</a>
                                 </div>
                                 <div class="product-details-wishlist">
                                     <a title="Add to wishlist" href="#"><i class="fa fa-heart"></i></a>
