--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -206,7 +206,7 @@
                                                             <select  name="brand" class="form-select">
                                                                 <% if(locals.brandData){ %>
                                                                     <% brandData.forEach(element =>{ %>
-                                                                <option value="<%= element._id %>" ><%= element.name %> </option>
+                                                                <option value="<%= element._id %>" ><%= element.brandName %> </option>
                                                                 <% }) %>
                                                                 <% } %>
                                                             </select>
